--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>p</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>p</h1>
+    <form id="proxy-form">
+        <input type="url" id="url-input" placeholder="Enter URL" required>
+        <button type="submit">Proxy URL</button>
+    </form>
+    <iframe id="proxy-frame" style="width: 100%; height: 90vh; border: none;"></iframe>
 
+    <script>
+        document.getElementById("proxy-form").addEventListener("submit", (e) => {
+            e.preventDefault();
+            const url = document.getElementById("url-input").value;
+            document.getElementById("proxy-frame").src = `https://innate-dour-camel.glitch.me/proxy?url=${encodeURIComponent(url)}`;
+        });
+    </script>
+</body>
+</html>
